OPTION(MITK_BUILD_TUTORIAL "Build the MITK tutorial" OFF)
IF(MITK_BUILD_TUTORIAL)
  ADD_SUBDIRECTORY(Tutorial)
ENDIF(MITK_BUILD_TUTORIAL)

IF(BUILD_OPENCHERRY)
  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../Utilities/openCherry)
  LINK_DIRECTORIES(${POCO_PATH}/lib)
  
  SET(OPENCHERRY_HOME ${CMAKE_CURRENT_BINARY_DIR}/../Utilities/openCherry CACHE INTERNAL "The openCherry binary directory")
  
  ADD_SUBDIRECTORY(Odin)
ENDIF(BUILD_OPENCHERRY)