INCLUDE_DIRECTORIES(${Q${KITNAME}_INCLUDE_DIRS})
FILE(GLOB FUNCTIONALITY_DIRS *)
# SET(FUNCTIONALITY_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/QmitkDataManager ${CMAKE_CURRENT_SOURCE_DIR}/QmitkMovieMaker)

FOREACH(d ${FUNCTIONALITY_DIRS})
  IF(IS_DIRECTORY ${d})
  IF(EXISTS ${d}/CMakeLists.txt)
    MESSAGE(STATUS "Processing ${d}")
    ADD_SUBDIRECTORY(${d})
    # GET_DIRECTORY_PROPERTY(PROP DIRECTORY ${d} DEFINITION FUNC_NAME)
  ELSE(EXISTS ${d}/CMakeLists.txt)
    MESSAGE("Functionality dir ${d} doesn't contain a CMakeLists.txt file")
  ENDIF(EXISTS ${d}/CMakeLists.txt)
  ENDIF(IS_DIRECTORY ${d})
ENDFOREACH(d)
