INCLUDE(files.cmake)

INCLUDE_DIRECTORIES(${QMITK_INCLUDE_DIRS})
QT_WRAP_UI(Qmitk QMITK_GENERATED_H QMITK_GENERATED_CPP ${QMITK_UI})
QT_WRAP_CPP(Qmitk QMITK_GENERATED_CPP ${QMITK_MOC_H})
ADD_LIBRARY(Qmitk ${QMITK_CPP} ${QMITK_GENERATED_CPP})
TARGET_LINK_LIBRARIES(Qmitk ${QT_LIBRARIES} ${MITK_CORE_LIBRARIES})

