INCLUDE(files.cmake)

INCLUDE_DIRECTORIES(${QMITK_INCLUDE_DIRS})
QT_WRAP_UI(Qmitk QMITK_GENERATED_H QMITK_GENERATED_CPP ${UI_FILES})
QT_WRAP_CPP(Qmitk QMITK_GENERATED_CPP ${MOC_H_FILES})
ADD_LIBRARY(Qmitk ${CPP_FILES} ${QMITK_GENERATED_CPP})
TARGET_LINK_LIBRARIES(Qmitk ${QT_LIBRARIES} ${MITK_CORE_LIBRARIES})

