INCLUDE(files.cmake)

INCLUDE_DIRECTORIES(${Q${KITNAME}_INCLUDE_DIRS})
QT_WRAP_UI(Qmitk Q${KITNAME}_GENERATED_H Q${KITNAME}_GENERATED_CPP ${UI_FILES})
QT_WRAP_CPP(Qmitk Q${KITNAME}_GENERATED_CPP ${MOC_H_FILES})
ADD_LIBRARY(Qmitk ${CPP_FILES} ${Q${KITNAME}_GENERATED_CPP})
TARGET_LINK_LIBRARIES(Qmitk ${QT_LIBRARIES} ${${KITNAME}_CORE_LIBRARIES})

